# agv_urdf_ros2_gazebo

./: M400T_test.py  README.md
agv_amr/: package.xml
agv_amr/launch/: spawn_robot.launch.py
agv_amr/urdf/: agv_amr.urdf
agv_amr/urdf/meshes/: right_wheel.STL
amr_sim/: CMakeLists.txt  package.xml
amr_sim/launch/: spawn_robot.launch.py
amr_sim/urdf/: UDRF_AMR_Model.csv  UDRF_AMR_Model.urdf
sendbooster_amr/: CMakeLists.txt
sendbooster_amr/launch/: spawn_robot.launch.py
sendbooster_amr/urdf/: sendbooster_amr.urdf
sendbooster_amr/urdf/meshes/: left_wheel.STL
