<?xml version="1.0"?>
<package format="3">
  <name>sendbooster_amr</name>
  <version>0.1.0</version>
  <description>Sendbooster AMR ROS 2 Package</description>

  <maintainer email="seongmin@uzurotech.com">Seongmin</maintainer>
  <license>Apache 2.0</license>

  <!-- 빌드와 실행을 위한 의존성 설정 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>rviz2</depend>

  <!-- 테스트를 위한 의존성 설정 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
